# structr

./: .gitignore  LICENSE  README.md  ideas.txt  pyproject.toml
structr/: cli.py  init.sh  navigate.sh  structr.py
