[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structr"
version = "0.1.0"
description = "A CLI tool to map and build directory trees by text."
authors = [{name="Anthony Speicher"}]
license = {text = "MIT"}
dependencies = []
requires-python = ">=3.8"

[project.scripts]
structr = "structr.cli:main"
